// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/activity-feed/activity-feed/ActivityFeed should correctly render activity state 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivityFeed
    feedState={
      Array [
        Object {
          "createdAt": 1234567890,
          "createdBy": Object {
            "id": 11,
            "name": "Akon",
          },
          "id": "123",
          "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
          "type": "comment",
        },
        Object {
          "assignees": Array [],
          "createdAt": 1234567891,
          "createdBy": Object {
            "id": 10,
            "name": "JayZ",
          },
          "id": "1234",
          "taggedMessage": "test",
          "type": "task",
        },
      ]
    }
    inputState={
      Object {
        "currentUser": Object {
          "id": 10,
          "name": "Kanye West",
        },
      }
    }
    isLoading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="box-ui-activity-feed-items-container"
        >
          <ActiveState
            currentUser={
              Object {
                "id": 10,
                "name": "Kanye West",
              }
            }
            handlers={undefined}
            inputState={
              Object {
                "currentUser": Object {
                  "id": 10,
                  "name": "Kanye West",
                },
              }
            }
            items={
              Array [
                Object {
                  "createdAt": 1234567890,
                  "createdBy": Object {
                    "id": 11,
                    "name": "Akon",
                  },
                  "id": "123",
                  "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
                  "type": "comment",
                },
                Object {
                  "assignees": Array [],
                  "createdAt": 1234567891,
                  "createdBy": Object {
                    "id": 10,
                    "name": "JayZ",
                  },
                  "id": "1234",
                  "taggedMessage": "test",
                  "type": "task",
                },
              ]
            }
            onCommentDelete={undefined}
            onTaskAssignmentUpdate={undefined}
            onTaskDelete={undefined}
            onTaskEdit={undefined}
            onVersionInfo={undefined}
            translations={undefined}
          />
        </div>,
        null,
      ],
      "className": "box-ui-activity-feed",
      "onKeyDown": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ActiveState
            currentUser={
              Object {
                "id": 10,
                "name": "Kanye West",
              }
            }
            handlers={undefined}
            inputState={
              Object {
                "currentUser": Object {
                  "id": 10,
                  "name": "Kanye West",
                },
              }
            }
            items={
              Array [
                Object {
                  "createdAt": 1234567890,
                  "createdBy": Object {
                    "id": 11,
                    "name": "Akon",
                  },
                  "id": "123",
                  "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
                  "type": "comment",
                },
                Object {
                  "assignees": Array [],
                  "createdAt": 1234567891,
                  "createdBy": Object {
                    "id": 10,
                    "name": "JayZ",
                  },
                  "id": "1234",
                  "taggedMessage": "test",
                  "type": "task",
                },
              ]
            }
            onCommentDelete={undefined}
            onTaskAssignmentUpdate={undefined}
            onTaskDelete={undefined}
            onTaskEdit={undefined}
            onVersionInfo={undefined}
            translations={undefined}
          />,
          "className": "box-ui-activity-feed-items-container",
        },
        "ref": [Function],
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "currentUser": Object {
              "id": 10,
              "name": "Kanye West",
            },
            "handlers": undefined,
            "inputState": Object {
              "currentUser": Object {
                "id": 10,
                "name": "Kanye West",
              },
            },
            "items": Array [
              Object {
                "createdAt": 1234567890,
                "createdBy": Object {
                  "id": 11,
                  "name": "Akon",
                },
                "id": "123",
                "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
                "type": "comment",
              },
              Object {
                "assignees": Array [],
                "createdAt": 1234567891,
                "createdBy": Object {
                  "id": 10,
                  "name": "JayZ",
                },
                "id": "1234",
                "taggedMessage": "test",
                "type": "task",
              },
            ],
            "onCommentDelete": undefined,
            "onTaskAssignmentUpdate": undefined,
            "onTaskDelete": undefined,
            "onTaskEdit": undefined,
            "onVersionInfo": undefined,
            "translations": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="box-ui-activity-feed-items-container"
          >
            <ActiveState
              currentUser={
                Object {
                  "id": 10,
                  "name": "Kanye West",
                }
              }
              handlers={undefined}
              inputState={
                Object {
                  "currentUser": Object {
                    "id": 10,
                    "name": "Kanye West",
                  },
                }
              }
              items={
                Array [
                  Object {
                    "createdAt": 1234567890,
                    "createdBy": Object {
                      "id": 11,
                      "name": "Akon",
                    },
                    "id": "123",
                    "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
                    "type": "comment",
                  },
                  Object {
                    "assignees": Array [],
                    "createdAt": 1234567891,
                    "createdBy": Object {
                      "id": 10,
                      "name": "JayZ",
                    },
                    "id": "1234",
                    "taggedMessage": "test",
                    "type": "task",
                  },
                ]
              }
              onCommentDelete={undefined}
              onTaskAssignmentUpdate={undefined}
              onTaskDelete={undefined}
              onTaskEdit={undefined}
              onVersionInfo={undefined}
              translations={undefined}
            />
          </div>,
          null,
        ],
        "className": "box-ui-activity-feed",
        "onKeyDown": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ActiveState
              currentUser={
                Object {
                  "id": 10,
                  "name": "Kanye West",
                }
              }
              handlers={undefined}
              inputState={
                Object {
                  "currentUser": Object {
                    "id": 10,
                    "name": "Kanye West",
                  },
                }
              }
              items={
                Array [
                  Object {
                    "createdAt": 1234567890,
                    "createdBy": Object {
                      "id": 11,
                      "name": "Akon",
                    },
                    "id": "123",
                    "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
                    "type": "comment",
                  },
                  Object {
                    "assignees": Array [],
                    "createdAt": 1234567891,
                    "createdBy": Object {
                      "id": 10,
                      "name": "JayZ",
                    },
                    "id": "1234",
                    "taggedMessage": "test",
                    "type": "task",
                  },
                ]
              }
              onCommentDelete={undefined}
              onTaskAssignmentUpdate={undefined}
              onTaskDelete={undefined}
              onTaskEdit={undefined}
              onVersionInfo={undefined}
              translations={undefined}
            />,
            "className": "box-ui-activity-feed-items-container",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentUser": Object {
                "id": 10,
                "name": "Kanye West",
              },
              "handlers": undefined,
              "inputState": Object {
                "currentUser": Object {
                  "id": 10,
                  "name": "Kanye West",
                },
              },
              "items": Array [
                Object {
                  "createdAt": 1234567890,
                  "createdBy": Object {
                    "id": 11,
                    "name": "Akon",
                  },
                  "id": "123",
                  "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
                  "type": "comment",
                },
                Object {
                  "assignees": Array [],
                  "createdAt": 1234567891,
                  "createdBy": Object {
                    "id": 10,
                    "name": "JayZ",
                  },
                  "id": "1234",
                  "taggedMessage": "test",
                  "type": "task",
                },
              ],
              "onCommentDelete": undefined,
              "onTaskAssignmentUpdate": undefined,
              "onTaskDelete": undefined,
              "onTaskEdit": undefined,
              "onVersionInfo": undefined,
              "translations": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/activity-feed/ActivityFeed should correctly render empty state 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivityFeed
    feedState={Array []}
    inputState={
      Object {
        "currentUser": Object {
          "id": 10,
          "name": "Kanye West",
        },
      }
    }
    isLoading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="box-ui-activity-feed-items-container"
        >
          <EmptyState
            isLoading={false}
            showCommentMessage={false}
          />
        </div>,
        null,
      ],
      "className": "box-ui-activity-feed",
      "onKeyDown": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <EmptyState
            isLoading={false}
            showCommentMessage={false}
          />,
          "className": "box-ui-activity-feed-items-container",
        },
        "ref": [Function],
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLoading": false,
            "showCommentMessage": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="box-ui-activity-feed-items-container"
          >
            <EmptyState
              isLoading={false}
              showCommentMessage={false}
            />
          </div>,
          null,
        ],
        "className": "box-ui-activity-feed",
        "onKeyDown": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <EmptyState
              isLoading={false}
              showCommentMessage={false}
            />,
            "className": "box-ui-activity-feed-items-container",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isLoading": false,
              "showCommentMessage": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/activity-feed/ActivityFeed should correctly render empty state with loading indicator 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivityFeed
    feedState={Array []}
    inputState={
      Object {
        "currentUser": Object {
          "id": 10,
          "name": "Kanye West",
        },
      }
    }
    isLoading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="box-ui-activity-feed-items-container"
        >
          <EmptyState
            isLoading={true}
            showCommentMessage={false}
          />
        </div>,
        null,
      ],
      "className": "box-ui-activity-feed",
      "onKeyDown": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <EmptyState
            isLoading={true}
            showCommentMessage={false}
          />,
          "className": "box-ui-activity-feed-items-container",
        },
        "ref": [Function],
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLoading": true,
            "showCommentMessage": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="box-ui-activity-feed-items-container"
          >
            <EmptyState
              isLoading={true}
              showCommentMessage={false}
            />
          </div>,
          null,
        ],
        "className": "box-ui-activity-feed",
        "onKeyDown": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <EmptyState
              isLoading={true}
              showCommentMessage={false}
            />,
            "className": "box-ui-activity-feed-items-container",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isLoading": true,
              "showCommentMessage": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/activity-feed/ActivityFeed should render approval comment form if comment submit handler is passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivityFeed
    feedState={Array []}
    handlers={
      Object {
        "comments": Object {
          "create": [MockFunction],
        },
        "contacts": Object {
          "getApproverWithQuery": [MockFunction],
          "getMentionWithQuery": [MockFunction],
        },
        "tasks": Object {
          "create": [MockFunction],
        },
      }
    }
    inputState={
      Object {
        "currentUser": Object {
          "id": 10,
          "name": "Kanye West",
        },
      }
    }
    isLoading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="box-ui-activity-feed-items-container"
        >
          <EmptyState
            isLoading={false}
            showCommentMessage={true}
          />
        </div>,
        <ApprovalCommentForm
          approverSelectorContacts={undefined}
          className="box-ui-activity-feed-comment-input "
          createComment={[Function]}
          createTask={[Function]}
          getApproverContactsWithQuery={[MockFunction]}
          getMentionContactsWithQuery={[MockFunction]}
          isDisabled={undefined}
          isOpen={false}
          mentionSelectorContacts={undefined}
          onCancel={[Function]}
          onFocus={[Function]}
          onSubmit={[Function]}
          user={
            Object {
              "id": 10,
              "name": "Kanye West",
            }
          }
        />,
      ],
      "className": "box-ui-activity-feed",
      "onKeyDown": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <EmptyState
            isLoading={false}
            showCommentMessage={true}
          />,
          "className": "box-ui-activity-feed-items-container",
        },
        "ref": [Function],
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLoading": false,
            "showCommentMessage": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "approverSelectorContacts": undefined,
          "className": "box-ui-activity-feed-comment-input ",
          "createComment": [Function],
          "createTask": [Function],
          "getApproverContactsWithQuery": [MockFunction],
          "getMentionContactsWithQuery": [MockFunction],
          "isDisabled": undefined,
          "isOpen": false,
          "mentionSelectorContacts": undefined,
          "onCancel": [Function],
          "onFocus": [Function],
          "onSubmit": [Function],
          "user": Object {
            "id": 10,
            "name": "Kanye West",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="box-ui-activity-feed-items-container"
          >
            <EmptyState
              isLoading={false}
              showCommentMessage={true}
            />
          </div>,
          <ApprovalCommentForm
            approverSelectorContacts={undefined}
            className="box-ui-activity-feed-comment-input "
            createComment={[Function]}
            createTask={[Function]}
            getApproverContactsWithQuery={[MockFunction]}
            getMentionContactsWithQuery={[MockFunction]}
            isDisabled={undefined}
            isOpen={false}
            mentionSelectorContacts={undefined}
            onCancel={[Function]}
            onFocus={[Function]}
            onSubmit={[Function]}
            user={
              Object {
                "id": 10,
                "name": "Kanye West",
              }
            }
          />,
        ],
        "className": "box-ui-activity-feed",
        "onKeyDown": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <EmptyState
              isLoading={false}
              showCommentMessage={true}
            />,
            "className": "box-ui-activity-feed-items-container",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isLoading": false,
              "showCommentMessage": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "approverSelectorContacts": undefined,
            "className": "box-ui-activity-feed-comment-input ",
            "createComment": [Function],
            "createTask": [Function],
            "getApproverContactsWithQuery": [MockFunction],
            "getMentionContactsWithQuery": [MockFunction],
            "isDisabled": undefined,
            "isOpen": false,
            "mentionSelectorContacts": undefined,
            "onCancel": [Function],
            "onFocus": [Function],
            "onSubmit": [Function],
            "user": Object {
              "id": 10,
              "name": "Kanye West",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
